--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
-  "name": "base_types",
-  "version": "1.0.1",
+  "name": "@yigal/base_types",
+  "version": "1.0.2",
   "main": "index.ts",
-  "types": "index.ts"
+  "types": "index.ts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yigalirani/base_types.git"
+  } 
 }
