--- a/package.json
+++ b/package.json
@@ -1,8 +1,21 @@
 {
   "name": "@yigal/base_types",
-  "version": "1.0.3",
-  "main": "index.ts",
-  "types": "index.ts",
+  "version": "1.0.4",
+  "main": "src/index.ts",
+  "types": "types/src/index.d.ts",
+  "scripts": {
+  "watch_build": "node --watch-path=./src build.mjs",
+    "test": "node dist/test.js",
+    "watch_tsc": "tsc --build --watch",
+    "run_biome": "biome lint",
+    "run_eslint": "node ./run_eslint.mjs"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "2.2.2",
+    "globals": "^16.3.0",
+    "typescript": "^5.0.0",
+    "@types/node": "^20.0.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/yigalirani/base_types.git"
