--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yigal/base_types",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "main": "src/index.ts",
   "types": "types/src/index.d.ts",
   "scripts": {
@@ -14,7 +14,15 @@
     "@biomejs/biome": "2.2.2",
     "globals": "^16.3.0",
     "typescript": "^5.0.0",
-    "@types/node": "^20.0.0"
+    "@eslint/css": "^0.10.0",
+    "@eslint/js": "^9.34.0",
+    "@types/node": "^24.0.14",
+    "eslint": "^9.34.0",
+    "eslint-formatter-visualstudio": "^8.40.0",
+    "typescript-eslint": "^8.36.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import-x": "^4.16.1",
+    "esbuild": "^0.25.8"    
   },
   "repository": {
     "type": "git",
